# instagram_dm_assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/channels/: __init__.py  adapters.py  base.py
backend/app/core/: analytics_dates.py  client_ip.py  config.py  csrf.py  errors.py  log_masking.py  logging.py  metric_labels.py  metrics.py  middleware.py  openapi.py  rate_limit.py  request_context.py  roles.py  security.py
backend/app/db/: base.py  session.py
backend/app/domain/: __init__.py  enums.py  mixins.py  models.py
backend/app/integrations/: catalog_hybrid_search.py  gemini_client.py  instagram_webhook.py  llm_client.py  openai_client.py  qdrant_client.py  rabbitmq.py  redis_cache.py  redis_lock.py  webhook_signature.py
backend/app/realtime/: __init__.py  publisher.py
backend/app/repositories/: __init__.py  action_attempt_repository.py  agent_action_repository.py  agent_run_repository.py  audit_log_repository.py  catalog_repository.py  channel_connection_session_repository.py  conversation_context_repository.py  conversation_event_repository.py  conversation_repository.py  conversation_slots_repository.py  customer_repository.py  failed_job_repository.py  instagram_account_repository.py  instagram_product_map_repository.py  inventory_repository.py  inventory_reservation_repository.py  message_repository.py  operator_review_repository.py  order_item_draft_repository.py  order_repository.py  order_state_transition_repository.py  outbox_event_repository.py  payment_repository.py  pilot_mode_repository.py  policy_version_repository.py  product_repository.py  resolver_repository.py  shipment_repository.py  shop_repository.py  telegram_connection_session_repository.py  user_repository.py  variant_repository.py  webhook_event_repository.py
backend/app/schemas/: __init__.py  agent.py  agent_settings.py  analytics.py  auth.py  catalog.py  channels.py  conversation.py  customer.py  customer_preferences.py  dashboard.py  failed_job.py  fashion.py  incident.py  instagram_account.py  instagram_connect.py  instagram_product_map.py  inventory.py  order.py  order_correctness.py  payment.py  pilot.py  policy.py  product.py  queue_events.py  recovery.py  replay.py  resolve.py  risk.py  scenario.py  shop.py  simulator.py  social_admin.py  suggested_reply.py  telegram_connect.py  trace.py  triggers.py  trl_validation.py  upsell.py  variant.py  (+1 more)
backend/app/scripts/: _db_bootstrap.py  ensure_admin.py  generate_social_admin_scenarios.py  generate_trl_report.py  run_golden_replay_suite.py  run_resolver_benchmark.py  run_scenario_regression.py  seed.py  seed_demo_data.py  (+1 more)
(+758 files in other folders)
