[project]
name = "instagram-dm-assistant-backend"
version = "1.0.0"
description = "FastAPI backend for a multi-channel catalog commerce assistant."
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=43.0.0",
    "fastapi>=0.115.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "psycopg[binary]>=3.2.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.4.0",
    "PyJWT>=2.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "pika>=1.3.0",
    "redis>=5.0.0",
    "openai>=1.40.0",
    "qdrant-client>=1.12.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "httpx2>=2.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "google-genai>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
markers = [
    "integration: tests that require a live PostgreSQL database and run Alembic migrations",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
