[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "modira-backend"
version = "1.0.0"
description = "FastAPI backend for a multi-channel catalog commerce assistant."
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "bcrypt>=4.0.0,<6",
    "cryptography>=43.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-redis>=0.64b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-sdk>=1.43.0",
    "pika>=1.3.0",
    "prometheus-client>=0.21.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "PyJWT>=2.9.0",
    "qdrant-client>=1.12.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require a live PostgreSQL database and run Alembic migrations",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app"]
exclude = [".venv", "app/db/migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
